WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200688
Fix potential thread safety issue under WebResourceLoadStatisticsStore::hasHadUserInteraction()
https://bugs.webkit.org/show_bug.cgi?id=200688
Summary
Fix potential thread safety issue under WebResourceLoadStatisticsStore::hasHa...
Chris Dumez
Reported
2019-08-13 13:28:26 PDT
Fix potential thread safety issue under WebResourceLoadStatisticsStore::hasHadUserInteraction(). It passes a RegistrableDomain to another thread without isolated copying it.
Attachments
Patch
(2.00 KB, patch)
2019-08-13 13:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-08-13 13:29:17 PDT
Created
attachment 376206
[details]
Patch
WebKit Commit Bot
Comment 2
2019-08-13 14:00:55 PDT
Comment on
attachment 376206
[details]
Patch Clearing flags on attachment: 376206 Committed
r248634
: <
https://trac.webkit.org/changeset/248634
>
WebKit Commit Bot
Comment 3
2019-08-13 14:00:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-08-13 14:01:18 PDT
<
rdar://problem/54272940
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug